# newton

./: .gitignore  .gitmodules  CMakeLists.txt  LoadCellReader.ino  README.md  arm-toolchain.cmake  ci.sh  forcesensor.h  newton.sublime-project  plot.py  reader.py  requirements.txt  serialcomms.cpp  test.sh
data/: pushups.ipynb
data/.ipynb_checkpoints/: pushups-checkpoint.ipynb
include/: ArduinoLinux.h  ArduinoUtils.h  application.h  buffer.h  hostcomms.h  interfaces.h  logging.h  node.h  sensor.h  serial.h  serialcomms.h  targetcomms.h
mocks/: CMakeLists.txt  mocks.cpp  mocks.h  sensor.cpp  sensor_stub.h
src/: CMakeLists.txt  application.cpp  assert.cpp  buffer.cpp  forcesensor.cpp  forcesensor.h  hostcomms.cpp  logging.h  main.cpp  newton.cpp  node.cpp  sensor.cpp  serial.cpp  serialcomms.cpp  serialcomms.h  targetcomms.cpp
test/: Arduino.h  mocks.cpp  mocks.h  test.cpp  test_force_plate.cpp
tests/: Arduino.h  CMakeLists.txt  main.cpp  mocks.cpp  mocks.h  runner.cpp  test_buffer.cpp  test_comms.cpp  test_force_plate.cpp  test_integration.cpp  test_node.cpp
tools/: CMakeLists.txt  plot.py  reader.py
tools/hcomms/: CMakeLists.txt  README.md  demo.py  setup.py
tools/hcomms/include/: hcomms.h  i2c_serial.h
tools/hcomms/newton/hcomms/: hello.cpp
tools/hcomms/src/: bindings.cpp  hcomms.cpp  i2c_serial.cpp
